--- a/series/index.html
+++ b/series/index.html
@@ -3,21 +3,21 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Series | &lt;/Nishith></title>
+<title>Series | Nishith</title>
 <meta name=keywords content>
 <meta name=description content="A Place to talk about about Technology, Data Science, Machine Learning, PC and Life">
 <meta name=author content="Nishith">
-<link rel=canonical href=https://nishu8.github.io/NishithBlog/series/>
-<link crossorigin=anonymous href=/NishithBlog/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://nishu8.github.io/NishithBlog/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://nishu8.github.io/NishithBlog/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=https://nishu8.github.io/NishithBlog/favicon-32x32.png>
-<link rel=apple-touch-icon href=https://nishu8.github.io/NishithBlog/apple-touch-icon.png>
-<link rel=mask-icon href=https://nishu8.github.io/NishithBlog/safari-pinned-tab.svg>
+<link rel=canonical href=https://nishithblog.ml/series/>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css integrity="sha256-yIlj/i15RiAA/Q+xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as=style>
+<link rel=icon href=https://nishithblog.ml/favicon.ico>
+<link rel=icon type=image/png sizes=16x16 href=https://nishithblog.ml/favicon-16x16.png>
+<link rel=icon type=image/png sizes=32x32 href=https://nishithblog.ml/favicon-32x32.png>
+<link rel=apple-touch-icon href=https://nishithblog.ml/apple-touch-icon.png>
+<link rel=mask-icon href=https://nishithblog.ml/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.92.0">
-<link rel=alternate type=application/rss+xml href=https://nishu8.github.io/NishithBlog/series/index.xml>
+<link rel=alternate type=application/rss+xml href=https://nishithblog.ml/series/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
@@ -25,7 +25,7 @@
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-216819723-1','auto'),ga('send','pageview'))</script><meta property="og:title" content="Series">
 <meta property="og:description" content="A Place to talk about about Technology, Data Science, Machine Learning, PC and Life">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://nishu8.github.io/NishithBlog/series/">
+<meta property="og:url" content="https://nishithblog.ml/series/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Series">
 <meta name=twitter:description content="A Place to talk about about Technology, Data Science, Machine Learning, PC and Life">
@@ -35,7 +35,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://nishu8.github.io/NishithBlog/ accesskey=h title="</Nishith> (Alt + H)">&lt;/Nishith></a>
+<a href=https://nishithblog.ml/ accesskey=h title="Nishith (Alt + H)">Nishith</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -43,12 +43,12 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://nishu8.github.io/NishithBlog/archives title=Archive>
+<a href=https://nishithblog.ml/archives title=Archive>
 <span>Archive</span>
 </a>
 </li>
 <li>
-<a href=https://nishu8.github.io/NishithBlog/search/ title="Search (Alt + /)" accesskey=/>
+<a href=https://nishithblog.ml/search/ title="Search (Alt + /)" accesskey=/>
 <span>Search</span>
 </a>
 </li>
@@ -63,7 +63,7 @@
 </ul>
 </main>
 <footer class=footer>
-<span>&copy; 2022 <a href=https://nishu8.github.io/NishithBlog/>&lt;/Nishith></a></span>
+<span>&copy; 2022 <a href=https://nishithblog.ml/>Nishith</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
