deploy: 502562a479f3702365a51274b432bc9bd5067104

--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
 </footer>
 </article>
 <article class=post-entry>
+<figure class=entry-cover><img loading=lazy src="https://images.unsplash.com/photo-1494959764136-6be9eb3c261e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt>
+</figure>
+<header class=entry-header>
+<h2>100+ Medium Followers in 2022 and Making an Online Presence 👨‍💻
+</h2>
+</header>
+<section class=entry-content>
+<p>Hey Readers! Happy New Year 🎉 and Let’s make this year count!
+I wish everyone a great year ahead and may you never stopping dreaming!
+Every year I make some resolutions to become a better version of myself. Past years have been difficult for all us and these goals help me keep moving forward. Here are some of my previous year’s resolutions and their final outcome (Spoiler: I’m not perfect):...</p>
+</section>
+<footer class=entry-footer><span title="2022-01-16 18:00:00 +0530 +0530">January 16, 2022</span>&nbsp;·&nbsp;3 min&nbsp;·&nbsp;Nishith</footer>
+<a class=entry-link aria-label="post link to 100+ Medium Followers in 2022 and Making an Online Presence 👨‍💻" href=https://nishithblog.ml/posts/2022-01-16-100-medium-followers-making-online-presence/></a>
+</article>
+<article class=post-entry>
 <figure class=entry-cover>
 <img loading=lazy src=https://nishithblog.ml/posts/2022-01-02-python-vs-r/python-vs-r.png alt>
 </figure>
