deploy: 167f50c1de7a3a1259191c97515854dcf8befcbb

--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
 </footer>
 </article>
 <article class=post-entry>
+<figure class=entry-cover>
+<img loading=lazy src=https://nishithblog.ml/posts/2022-01-24-how-i-get-up-at-4-30/hourglass.jpg alt>
+</figure>
+<header class=entry-header>
+<h2>How I get up at 4:30 am Every Day and You Can Too
+</h2>
+</header>
+<section class=entry-content>
+<p>All of us have some kind of side hustles/projects that we want to be a part of our lives. It may include writing a book/blog, reading, learning, exercising and the list goes on. But due to our full time work/college life, we don’t always get time to invest in ourselves and work towards our goals.
+I used to wake up at 5 a.m. during my childhood days, because our school started at 7 and my school bus would come at the stop at around 6 because the school was 12 kilometers away from my house and it took around 30 minutes to reach the destination....</p>
+</section>
+<footer class=entry-footer><span title="2022-01-24 08:00:00 +0530 +0530">January 24, 2022</span>&nbsp;·&nbsp;5 min&nbsp;·&nbsp;Nishith</footer>
+<a class=entry-link aria-label="post link to How I get up at 4:30 am Every Day and You Can Too" href=https://nishithblog.ml/posts/2022-01-24-how-i-get-up-at-4-30/></a>
+</article>
+<article class=post-entry>
 <figure class=entry-cover><img loading=lazy src="https://images.unsplash.com/photo-1494959764136-6be9eb3c261e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt>
 </figure>
 <header class=entry-header>
